# Arkon

./: .gitignore  README.md
.github/workflows/: azure-functions-app-nodejs.yml
Arkon-back/: Cargo.toml
Arkon-back/logs/: access.log.2025-06-27
Arkon-back/src/: auth.rs  handlers.rs  main.rs  models.rs  mongo.rs
Arkon-front/: package-lock.json  package.json
Arkon-front/src/: app.html
Arkon-front/src/routes/: +layout.svelte  +page.svelte  Footer.svelte  Header.svelte
Arkon-front/src/routes/login/: +page.svelte
Arkon-front/src/routes/newProduct/: +page.svelte
Arkon-front/src/routes/register/: +page.svelte
Back-end/: Cargo.toml
Back-end/src/: handlers.rs  main.rs  models.rs
Front-end/: package-lock.json  package.json
Front-end/src/lib/components/: Header.svelte  Sidebar.svelte
Front-end/src/lib/styles/: all.css
Front-end/src/routes/: +layout.svelte
Front-end/src/routes/admin/bank/: +page.svelte
Front-end/src/routes/login/: +page.svelte
Front-end/src/routes/profile/[id]/: +page.svelte
Front-end/src/routes/register/: +page.svelte
Services/: banTeste.py
mobile/lib/: main.dart
sql/: companies.sql  login_attempts.sql  products.sql  users.sql  webstores.sql
