[package]
name = "Back-end"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["multipart", "headers", "tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "chrono"] }
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
headers = "0.3"
once_cell = "1.18"
bcrypt = "0.17"
bson = "2.8.1"
mongodb = "2.1"
anyhow = "1.0.98"
futures-util = "0.3.31"
base64     = "0.21"
mime_guess = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }